Fix the alignment problem in texteditor

--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -3,14 +3,6 @@
 @import (less) "quill/dist/quill.bubble.css";
 @import (less) "../js/frappe/form/controls/quill-mention/quill.mention.css";
 
-/* arabic font add by open-alt.com */
-// @font-face {
-//   font-family: 'Droid Arabic Kufi';
-//   font-style: normal;
-//   font-weight: 400;
-//   src: url("/assets/frappe/openaltfonts/DroidKufi-Regular.ttf");
-//   unicode-range: U+0600-06FF, U+200C-200E, U+2010-2011, U+204F, U+2E41, U+FB50-FDFF, U+FE80-FEFC;
-// }
 
 
 .ql-toolbar.ql-snow, .ql-container.ql-snow {
@@ -150,4 +142,13 @@
 	&::before {
 		content: none;
 	}
+}
+
+// Added by open-alt.com
+.control-input {
+  direction: ltr;
+}
+
+.ql-editor ol li.ql-direction-rtl{
+  padding-right: 0;
 }
